--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">PartyCheckApp</string>
+    <string name="debtors">debtors</string>
+    <string name="search">search</string>
+    <string name="my_party">my_party</string>
+    <string name="profile">profile</string>
+    <string name="title_activity_bottom_nav">BottomNavActivity</string>
+    <string name="title_home">home</string>
+    <string name="search_hint">input some data</string>
+    <string name="title_activity_drawer">DrawerAct</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="welcome_string">Welcome To Party Purse!</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="log_in">Log In</string>
+    <string name="sign_in">First time here? Sign in</string>
+    <string name="sign_in_btn">Sign In</string>
+    <string name="email">Email</string>
 </resources>
