--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,10 @@
     <string name="error_phone">Enter phone number!</string>
     <string name="error_login">Enter your nickname!</string>
     <string name="error_pass">Enter password!</string>
+    <string name="error_title">Enter title!</string>
+    <string name="error_description">Enter description!</string>
+    <string name="error_place">Enter place!</string>
+    <string name="add_party">Add Party</string>
     <string name="error_pass_length">Password too short, enter minimum 6 characters!</string>
     <string name="error_signin">Sign In Error</string>
 </resources>
