--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="error_title">Enter title!</string>
     <string name="error_description">Enter description!</string>
     <string name="error_place">Enter place!</string>
+    <string name="error_price">Enter price!</string>
     <string name="add_party">Add Party</string>
     <string name="error_pass_length">Password too short, enter minimum 6 characters!</string>
     <string name="error_signin">Sign In Error</string>
